force-app/main/default/objects/Review__c/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <label>Plan</label>
    <type>Lookup</type>
    <referenceTo>Plan__c</referenceTo>
    <relationshipName>Reviews</relationshipName>
    <required>true</required>
</CustomField>