force-app/main/default/objects/Review__c/fields/Review__c.field-meta.xml
<CustomField>
    <fullName>Review__c</fullName>
    <label>Review Content</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>