force-app/main/default/objects/Review__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>Reviews</relationshipName>
    <required>true</required>
</CustomField>